# typhoon-it-support-agent

./: .gitignore  README.md  start-backend.sh  start-frontend.sh
agentic-workflow/: .env.example  .gitignore  README.md  pyproject.toml  run_tests.sh
agentic-workflow/documents/: hardware_request_guide_th.md  it_policy.md  new_employee_it_onboarding.md  remote_work_guide.md  security_awareness_th.md  software_guide_th.md  troubleshooting_guide.md
agentic-workflow/scripts/: init_vector_store.py  run_evaluation.py  test_checkpointer.py  update_ticket_storage.py
agentic-workflow/src/typhoon_it_support/: __init__.py  main.py
agentic-workflow/src/typhoon_it_support/agents/: __init__.py  agent_node.py  tool_node.py
agentic-workflow/src/typhoon_it_support/api/: __init__.py  chat_endpoints.py  init_demo_tickets.py  models.py  run.py  server.py  ticket_advanced_endpoints.py  ticket_endpoints.py
agentic-workflow/src/typhoon_it_support/config/: __init__.py  settings.py  user_context.py
agentic-workflow/src/typhoon_it_support/evaluation/: __init__.py  metrics.py  test_cases.py
agentic-workflow/src/typhoon_it_support/events/: __init__.py  emitter.py  middleware.py
agentic-workflow/src/typhoon_it_support/graph/: __init__.py  checkpointer.py  workflow.py
agentic-workflow/tests/: README_TESTS.md  __init__.py  conftest.py  test_api.py  test_config.py  test_models.py  test_prompts.py  test_router_node.py  test_ticket_api.py  test_ticket_tools.py  test_tools.py  test_workflow.py
agentic-workflow/vector_store/: index.faiss  index.pkl
docs/: API.md  ARCHITECTURE.md  (+4 more)
(+36 files in other folders)
