[project]
name = "typhoon-it-support"
version = "0.1.0"
description = "IT Support Agentic Workflow powered by LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.2",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "faiss-cpu>=1.7.4",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning:langgraph.*",
    "ignore:AgentStatePydantic has been moved:DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 200
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]
